# prism

./: CMakeLists.txt  README.md  build.gradle  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-android.yml  build-docs.yml  build-emscripten.yml  build-gdextension.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-sdist.yml  build-wheels.yml  build-windows.yml  build.yml  ci.yml  publish_to_pypi.yml  release.yml
bindings/py/prism/prism/: core.py  lib.py
cmake/: winelib-toolchain.cmake
defs/: prism_orca_bridge.def  prism_orca_bridge32.def  prism_speech_dispatcher_bridge.def  prism_speech_dispatcher_bridge32.def
demos/: CMakeLists.txt  speechd_demo.cpp
doc/src/api/: backend-identifiers.md  registry-functions.md
gdextension/: CMakeLists.txt
gdextension/src/: godot_prism_context.cpp
gradle/: libs.versions.toml
include/: prism.h
shims/: CMakeLists.txt
shims/tolk/: CMakeLists.txt  lock.c  lock.h  thread_safety.h  tolk.c  tolk.h  unicode.c  unicode.h
source/: backend_check.cpp  delayimp.cpp  simdutf.cpp  simdutf.h
source/backends/: avspeech.cpp  backend_registry.h  boy_pc_reader.cpp  jaws.cpp  nvda.cpp  orca.cpp  sense_reader.cpp  speech_dispatcher.cpp  system_access.cpp  uia.cpp  voiceover.cpp  window_eyes.cpp  zdsr.cpp
source/backends/raw/: prism_orca_bridge.h  prism_speech_dispatcher_bridge.h  sense_reader.h
tests/: CMakeLists.txt
winelibs/: CMakeLists.txt
winelibs/cmake/: PrismWinelib.cmake
winelibs/orca/: CMakeLists.txt  bridge.cpp  bridge.h  exports.spec
winelibs/speechd/: CMakeLists.txt  bridge.cpp  bridge.h  exports.spec
