cmake_minimum_required(VERSION 3.20)
project(prism_winelibs LANGUAGES C CXX)
include(GNUInstallDirs)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
include(PrismWinelib)
set(PRISM_DBUS_XML_DIR
    ""
    CACHE PATH "Path to Prism's top-level dbus/ directory")
if(NOT PRISM_DBUS_XML_DIR)
  message(FATAL_ERROR "PRISM_DBUS_XML_DIR must be set")
endif()
find_package(PkgConfig REQUIRED)
find_program(GDBUS_CODEGEN gdbus-codegen)
pkg_check_modules(GIO IMPORTED_TARGET gio-2.0)
pkg_check_modules(SPEECHD IMPORTED_TARGET speech-dispatcher)
if(GIO_FOUND)
  add_subdirectory(orca)
endif()
if(SPEECHD_FOUND)
  add_subdirectory(speechd)
endif()
